src/content/docs/0.11.0/configuration/tabs.mdx
---
title: Tabs
description: Configuring rmpc's tabs
sidebar:
    order: 13
slug: 0.11.0/configuration/tabs
---

import ConfigValue from "../../../../components/ConfigValue.tsx";
import { Image } from "astro:assets";
import example_property_pane from "../../../../assets/0.11.0/example_property_pane.png";
import example_border_title from "../../../../assets/0.11.0/example_border_title.png";
import example_collapsed_borders from "../../../../assets/0.11.0/example_collapsed_borders.png";

<ConfigValue name="tabs" customText="<tab[]>" />

Provides an abiliy to configure what tabs are shown by rmpc. Each tab contains one or more panes. Panes
can be laid out how you want by splitting them via nesting multiple pane layouts. Each `pane_type` can be
displayed multiple times in one or more tabs, but ultimately it is a single instance of the given pane.
Check out the [default config](/0.11.0/reference/config/) for reference.

## tab

<ConfigValue name="tab" customText="(name: &#x22;<string>&#x22;, pane: Pane | Split | Component)" />

A single tab that will be shown by rmpc. Each tab has a name that is displayed in the tab bar and either a single or multiple `Pane`s.

### name

<ConfigValue name="name" type="string" />

Each tab has a name which will be displayed in the tab bar and can be used in the `SwitchToTab(<name>)` keybind.

### pane

<ConfigValue name="pane" type={["Pane", "Split", "Component"]} href="#pane--split--component" />

- `Pane(<pane>)` - Displays the given pane type itself. Available panes are listed in the [panes](/0.11.0/configuration/panes) page.
- `Split(direction: Horizontal | Vertical, panes: <sub_pane[]>)` splits the pane into multiple [sub pane](#sub_pane)s. Each split has
  a direction and a list of sub panes. More info on borders in [their section](#borders-and-border-title).
- `Component("<component_name>")` - Displays a [component](/0.11.0/configuration/layout#components)

### direction

<ConfigValue name="direction" type={["Horizontal", "Vertical"]} />

Determines which direction the pane will be split into.

### sub_pane

<ConfigValue
    name="panes"
    customText="(size: '50%', background_color: <color>, borders: <borders>, border_style: <style>, border_active_style: <style>, border_title: <property>[], border_title_position: Top | Bottom, border_title_alignment: Left | Center | Right, border_symbols: <border_symbols>, pane: Pane | Split | Component"
/>

Sub panes for the given split. The size can be either percent (`50%`), exact value(`3`) or a
ratio (`0.4r`).

- Exact value will reserve exactly that many rows/columns
- Percent value will reserve that portion of available space
- Ratio will take parent container's other size (if you are splitting horizontally it will take
  parent's height and if vertically then it will take parent's width) and multiply it with this number.
  The result is then rounded and used as an exact size. Useful to for example keep `AlbumArt` as
  square size at all times. Note that the sizes here are in terminal cell width/height and not pixels.

Each sub pane can be either a `Pane` or another `Split`. Sub pane can also have borders and border titles, more info in [their section](#borders-and-border-title).

### background_color

<ConfigValue name="background_color" type="string" customText="color" />

Background color of the pane's contents.

## borders and border title

<ConfigValue name="borders" type={['"NONE"', '"ALL"', '"LEFT"', '"RIGHT"', '"TOP"', '"BOTTOM"']} />

<ConfigValue name="border_title" customText="<property>[]" />

<ConfigValue name="border_title_alignment" type={["Left", "Center", "Right"]} />

<ConfigValue name="border_title_position" type={["Top", "Bottom"]} />

<ConfigValue name="border_style" type="other" customText="<style>" />

<ConfigValue name="border_active_style" type="other" customText="<style>" />

Define what borders are rendered around a tab or one of its panes. Default is `"NONE"`, meaning no borders.
By specifying `"ALL"` the borders will be on all sides of the pane/tab. The above values can also be combined,
if you for example want borders on the left and right, you can achieve it by defining `"LEFT | RIGHT"`.

Additionally, the border can also have a title. The title can also be placed at the top or bottom
border and aligned to left, right or center. Just the title will be drawn if you dont specify border
for the chosen side but specify a border_title.

The `border_style` and `border_active_style` override [borders_style](/0.11.0/configuration/theme#borders_style)
and [highlight_border_style](/0.11.0/configuration/theme#highlight_border_style) respectively
just for this pane.

:::note
Note that you have to account for the borders if you use exact sizing of panes. For example if your Header
is supposed to be 2 rows tall and has borders at TOP and BOTTOM you must set its size as 4.
:::

### border_symbols

<ConfigValue
    name="border_symbols"
    type={[
        "Plain",
        "Rounded",
        "Double",
        "Thick",
        "Empty",
        "Full",
        "ProportionalWide",
        "ProportionalTall",
        "OneEighthWide",
        "OneEighthTall",
        "Custom(<border_set>)",
        "Inherited(<border_set_inherited>)",
        'Library("<name>")',
    ]}
/>

You can define what symbol is used for what part of the border. This allows you to set borders to for
example `Rounded` style.

It also allows to define a completely custom symbols set with the `Custom` variant.

The `Inherited` variant is the same as `Custom` except it has a required `parent` property where
it will inherit all the symbols from its parent and you can override just the symbols you are interested
in.

The `Library("<name>")` variant uses a predefined custom symbol set defined in [border_symbol_sets](/0.11.0/configuration/theme#border_symbol_sets)

You can refer to [ratatui's documentation](https://docs.rs/ratatui/latest/ratatui/prelude/symbols/border/index.html) to see more info about these variants.

Examples:

<details>
  <summary>Click to expand</summary>

```rust
border_symbols: Rounded,
```

```rust
border_symbols: Library("custom_set"),
```

```rust
border_symbols: Custom(
    top_left: "a",
    top_right: "b",
    bottom_left: "c",
    bottom_right: "d",
    vertical_left: "|",
    vertical_right: "|",
    horizontal_top: "-",
    horizontal_bottom: "-",
),
```

```rust
border_symbols: Inherited(
    parent: Rounded,
    bottom_left: "├",
    bottom_right: "┤",
),
```

</details>

## Examples

Some tabs config examples below.

### Single border between panes

Single tab with queue and album art, with a border between them and also border around the whole split.

<details>
  <summary>Click to expand</summary>

```rust
tabs: [
    (
        name: "Queue",
        pane: Split(
            direction: Horizontal,
            borders: "ALL",
            panes: [
                (
                    size: "40%",
                    borders: "RIGHT",
                    pane: Pane(AlbumArt),
                ),
                (
                    size: "60%",
                    pane: Pane(Queue),
                ),
            ],
        ),
    ),
],
```

</details>

### Collapsed rounded borders between panes

Collapsed and connected borders between panes. The idea is to inherit the rounded border set and replace
only the `bottom_left` and `bottom_right` symbol to be the connecting symbol. Then you use the border
only on the sides where its needed to create collapsed borders.

<Image src={example_collapsed_borders} width={800} alt="Example collapsed borders" />

<details>
  <summary>Click to expand</summary>

theme.ron:

Note that this example does not work copy/paste style. It requires `header` and `progress_bar` components
to be defined.

```rust
components: {
    "header": Split(
        // not included
    ),
    "progress_bar": Split(
        // not included
    ),
},
border_symbol_sets: {
    "rounded_collapsed_bottom": (
        parent: Rounded,
        bottom_left: "├",
        bottom_right: "┤",
    ),
},
layout: Split(
    direction: Vertical,
    panes: [
        (
            size: "4",
            borders: "ALL",
            border_symbols: Library("rounded_collapsed_bottom"),
            pane: Component("header"),
        ),
        (
            size: "2",
            borders: "LEFT | RIGHT | BOTTOM",
            border_symbols: Library("rounded_collapsed_bottom"),
            pane: Pane(Tabs),
        ),
        (
            size: "100%",
            borders: "LEFT | RIGHT | BOTTOM",
            border_symbols: Library("rounded_collapsed_bottom"),
            background_color: "red",
            pane: Pane(TabContent),
        ),
        (
            size: "2",
            borders: "LEFT | RIGHT | BOTTOM",
            border_symbols: Rounded,
            border_title_position: Top,
            pane: Component("progress_bar"),
        ),
    ]
),
... rest of the theme
```

</details>

### Borders with title

Borders with title and styling.

<Image src={example_border_title} width={500} alt="Example border title" />

<details>
  <summary>Click to expand</summary>

config.ron:

```rust
tabs: [
(
    name: "Test",
    pane: Split(direction: Vertical, panes: [
        (
            size: "100%",
            borders: "NONE",
            pane: Pane(AlbumArt)
        ),
        (
            size: "4",
            borders: "ALL",
            border_title: [(kind: Text(" Now Playing "), style: (fg: "rgb(126, 144, 172)"))],
            border_title_position: Top,
            border_title_alignment: Left,
            pane: Split(direction: Vertical, panes: [
                (
                    size: "1",
                    pane: Pane(Property(content: [
                        ( kind: Property(Song(Title)), style: (fg: "rgb(235, 213, 121)", modifiers: "Bold") )
                    ], align: Center))
                ),
                (
                    size: "1",
                    pane: Pane(Property(content: [
                        ( kind: Property(Song(Artist)), style: (fg: "rgb(214, 119, 81)", modifiers: "Bold") ),
                        ( kind: Text(" - "), style: (fg: "rgb(33, 120, 122)", modifiers: "Bold") ),
                        ( kind: Property(Song(Album)), style: (fg: "rgb(33, 120, 122)", modifiers: "Bold") )
                    ], align: Center))
                ),
            ])
        ),
        (
            size: "1",
            borders: "NONE",
            pane: Pane(ProgressBar)
        ),
    ])
),
```

theme.ron:

```rust
    background_color: "rgb(30, 30, 20)",
    borders_style: (fg: "rgb(250,226,128)"),
    progress_bar: (
        symbols: ["", "█", "", "█", "" ],
        track_style: (fg: "rgb(30, 30, 20)"),
        elapsed_style: (fg: "rgb(250,226,128)"),
        thumb_style: (fg: "rgb(250,226,128)", bg: "rgb(30, 30, 20)"),
    ),
    layout: Split(
        direction: Vertical,
        panes: [
          (
              pane: Pane(TabContent),
              size: "100%",
          ),
        ],
    ),
    ... rest of the theme
```

</details>

### Single pane tab, border on left and right

You have to use `Split` here even for a single pane if you want a border.

<details>
  <summary>Click to expand</summary>

```rust
tabs: [
    (
        name: "Tab",
        pane: Split(
            direction: Horizontal,
            borders: "LEFT | RIGHT",
            panes: [
                (
                    size: "100%",
                    pane: Pane(Queue),
                ),
            ],
        ),
    ),
],
```

</details>

### More complex example using Property panes

<ConfigValue
    name="pane"
    customText="Pane(Property(content: <property>[], align: Left | Right | Center, scroll_speed: <number>))"
    href="/0.11.0/configuration/header/#header_property_kind"
/>

This config displays the `AlbumArt` and `Queue` panes and below them there are `Property` with pane with `StateV2`, `ProgressBar` pane and
another `Property` pane with combination of `Elapsed` and `Duration` status properties next to each other in a line.

The `Property` pane also scrolls around and cycles if the content is longer than its defined area when `scroll_speed` is set to a value higher
than 0. The value determines how fast the `Property` pane cycles in columns per second. This is tied to the elapsed time of the currently playing
song. This is disabled when set to 0 or not set at all.

<details>
  <summary>Click to expand</summary>

```rust
tabs: [
    (
        name: "Test",
        pane: Split(
            direction: Vertical,
            panes: [
                (
                    size: "100%",
                    borders: "ALL",
                    pane: Split(
                        borders: "ALL",
                        direction: Horizontal,
                        panes: [
                            (
                                size: "40%",
                                borders: "RIGHT",
                                pane: Pane(AlbumArt),
                            ),
                            (
                                size: "60%",
                                pane: Pane(Queue),
                            ),
                        ],
                    ),
                ),
                (
                    size: "3",
                    borders: "ALL",
                    pane: Split(
                        direction: Horizontal,
                        panes: [
                            (
                                pane: Pane(Property(content: [(kind: Property(Status(StateV2())))], align: Left)),
                                size: "10",
                            ),
                            (
                                size: "100%",
                                pane: Pane(ProgressBar),
                            ),
                            (
                                size: "25",
                                pane: Pane(Property(
                                    content: [
                                        (kind: Property(Status(Elapsed))),
                                        (kind: Text(" / ")),
                                        (kind: Property(Status(Duration))),
                                        (kind: Group([
                                            (kind: Text(" (")),
                                            (kind: Property(Status(Bitrate))),
                                            (kind: Text(" kbps)")),
                                        ])),
                                    ], align: Right,
                                )),
                            ),
                        ]
                    ),
                ),
            ],
        ),
    ),
],
```

</details>

<Image src={example_property_pane} width={800} alt="Example property pane" />
